--- a/assets/sass/themes/_color.scss
+++ b/assets/sass/themes/_color.scss
@@ -8,7 +8,7 @@ $midnightblue: rgba(44, 62, 80, 0.85);
 $teal: rgba(0, 134, 123, 0.85);
 $white: rgba(255, 255, 255, 0.85);
 
-.bg-list {
+.bg-site {
     background-color: #eff2f7;
 }
 
