--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -5,7 +5,7 @@
     {{ partial "head.html" . }}
 </head>
 
-<body class="ready" id="page" data-gr-c-s-loaded="true">
+<body class="ready bg-site" id="page" data-gr-c-s-loaded="true">
     {{ partial "header.html" . }}
 
     {{ block "main" . }}{{ end }}
