--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -8,7 +8,7 @@
                         {{ .Site.Params.Copyright -}}
                     </div>
                 </div>
-                <div class="col-md-8">
+                <div class="col-md-8 d-print-none">
                     <ul class="nav align-items-center justify-content-center justify-content-md-end">
                         <li class="nav-item">
                             <a class="nav-link" href="/blog/index.xml" target="_blank">
