--- a/layouts/partials/list-header.html
+++ b/layouts/partials/list-header.html
@@ -2,7 +2,7 @@
     <div class="row">
         <div class="col p-5 text-center">
             <h1>{{ .Title }}</h1>
-            <a href="{{ .Site.BaseURL }}" class="tongue tongue-bottom">
+            <a href="{{ .Site.BaseURL }}" class="tongue tongue-secondary tongue-bottom d-print-none">
                 <i class="iconfont icon-angle-up-o"></i>
             </a>
         </div>
