--- a/layouts/partials/single-header.html
+++ b/layouts/partials/single-header.html
@@ -2,7 +2,7 @@
     <div class="row">
         <div class="col p-5 text-center">
             <h1>{{ .Title }}</h1>
-            <footer>
+            <div>
                 {{ if not (eq .RelPermalink "/about/") }}
                 <p>
                     <i class="iconfont icon-NewFile mr-2"></i>
@@ -13,8 +13,8 @@
                     <i class="iconfont icon-modify mr-2"></i>
                     {{ dateFormat .Site.Params.dateformFull .Lastmod.Local }}
                 </p>
-            </footer>
-            <a href="../" class="tongue tongue-bottom d-print-none">
+            </div>
+            <a href="../" class="tongue tongue-secondary tongue-bottom d-print-none">
                 <i class="iconfont icon-angle-up-o"></i>
             </a>
         </div>
