--- a/assets/sass/pages/_markdown.scss
+++ b/assets/sass/pages/_markdown.scss
@@ -236,7 +236,7 @@ table {
   border-radius: 0.5rem;
 
   @media (min-width: 520px) {
-    margin: 1rem 1rem;
+    margin-bottom: 1rem;;
   }
 
   @media (max-width: 520px) {
