--- a/assets/sass/themes/_font.scss
+++ b/assets/sass/themes/_font.scss
@@ -6,6 +6,27 @@ $code-fonts: Consolas, "Andale Mono WT", "Andale Mono", Menlo, Monaco, "Lucida C
 body {
   font-family: 'Nunito Sans', sans-serif;
   color: $highlight-grey;
+  font-weight: 400;
+  line-height: 1.7;
+  font-size: 1rem;
+}
+
+.preview-img {
+  max-width: 100%;
+  max-height: 100%;
+  margin-bottom: 1rem;
+}
+
+.h1, .h2, .h3, .h4, .h5, .h6, h1, h2, h3, h4, h5, h6 {
+  font-family: inherit;
+  font-weight: 400;
+  line-height: 1.5;
+  margin-bottom: .66667rem;
+  color: #3c4858;
+}
+
+.h4, .h5, .h6, h4, h5, h6 {
+  font-weight: 600;
 }
 
 
