--- a/layouts/notes/list.html
+++ b/layouts/notes/list.html
@@ -19,13 +19,35 @@
                         <div id="title" class="my-4 border-bottom">
                             <h2>
                                 {{ .Title }}
-                                {{ if not .Parent.IsHome }}
-                                <a class="float-right text-sm" href="#" onclick="printAllNotes()">
-                                    打印全部
-                                </a>
-                                {{ end }}
                             </h2>
-                            {{ .Content | replaceRE "(<h[1-6] id=\"([^\"]+)\".+)(</h[1-6]+>)" `${1}<a href="#${2}" class="anchor" aria-hidden="true"><i class="fad fa-link"></i></a>${3}` | safeHTML }}
+                            {{ if not .Parent.IsHome }}
+                                <footer>
+                                    {{ with .Params.textbook }}
+                                    <span>
+                                        <i class="iconfont icon-book1 mr-2"></i>
+                                        {{ . }}
+                                    </span> <br />
+                                    {{ end }}
+                                    {{ with .Params.course }}
+                                    <span>
+                                        <i class="iconfont icon-chalkboard-teacher mr-2"></i>
+                                        {{ . }}
+                                    </span> <br />
+                                    {{ end }}
+                                    {{ with .Params.version }}
+                                    <span>
+                                        <i class="iconfont icon-git mr-2"></i> 修改记录<br />
+                                        {{ range . }}
+                                        <span style="margin-left: 2rem;">{{.}}</span><br />
+                                        {{ end }}
+                                    </span>
+                                    {{ end }}
+                                </footer>
+                                <br />
+                                {{ .Content }}
+                            {{ else }}
+                                {{ .Content }}
+                            {{ end }}
                         </div>
                         <div id="notes-list" class="list-group">
                             {{ range .Pages.ByWeight }}
@@ -35,7 +57,7 @@
                                 <span class="float-right">{{ len .Pages }} 篇</span>
                                 {{ else }}
                                 <span class="float-right">
-
+                                    {{ dateFormat .Site.Params.dateformFull .Lastmod.Local }}
                                 </span>
                                 {{ end }}
                             </a>
@@ -49,75 +71,78 @@
                 </div>
             </div>
         </div>
-        <script src="https://cdn.jsdelivr.net/npm/jquery@3.4.1/dist/jquery.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
-        <script src="https://cdn.jsdelivr.net/npm/axios@0.19.0/dist/axios.min.js" integrity="sha256-S1J4GVHHDMiirir9qsXWc8ZWw74PHHafpsHp5PXtjTs=" crossorigin="anonymous"></script>
-        <script defer src="https://cdn.jsdelivr.net/npm/katex@0.11.1/dist/katex.min.js" integrity="sha384-y23I5Q6l+B6vatafAwxRu/0oK/79VlbSz7Q9aiSZUvyWYIYsd+qj+o24G5ZU2zJz" crossorigin="anonymous"></script>
-        <script defer src="https://cdn.jsdelivr.net/npm/katex@0.11.1/dist/contrib/auto-render.min.js"
-            integrity="sha384-kWPLUVMOks5AQFrykwIup5lo0m3iMkkHrD0uJ4H5cjeGihAutqP0yW0J6dpFiVkI" crossorigin="anonymous"></script>
-        <script>
-            const loadPage = (div, title, link) => {
-                div.append('<h1>' + title + '</h1>');
-                return new Promise((resolve, reject) => {
-                    axios.get(link)
-                        .then(res => {
-                            const page = $(res.data);
-                            div.append(page.find('#content'));
-                            resolve();
-                        })
-                        .catch(err => reject(err));
-                });
-            }
-            const printAllNotes = () => {
-                const body = $('body');
-                const title = $('#title').clone().find('a').remove().end().text();
-                const list = $('#notes-list').children();
-                
-                body.children().remove();
-                body.append('<h1 id="title">Loading notes...</h1><hr/>');
-                
-                let pageLoaders = [];
-                $.each(list, (id, anchor) => {
-                    console.log(id, anchor);
-                    const div = $('<div id="page-' + id + '"></div>');
-                    div.appendTo(body);
-                    pageLoaders[id] = loadPage(div, anchor.text, anchor.href);
-                });
+    </div>
 
-                Promise.all(pageLoaders)
-                    .then(() => {
-                        $('#title').text(title);
-                        renderMathInElement(document.body, {
-                            delimiters: [{
-                                left: "$$",
-                                right: "$$",
-                                display: true
-                            },
-                            {
-                                left: "\\[",
-                                right: "\\]",
-                                display: true
-                            },
-                            {
-                                left: "$",
-                                right: "$",
-                                display: false
-                            },
-                            {
-                                left: "\\(",
-                                right: "\\)",
-                                display: false
-                            }]
-                        });
-                        window.print();
-                        window.location.reload();
+    <script defer src="https://cdn.jsdelivr.net/npm/katex@0.11.1/dist/katex.min.js" integrity="sha384-y23I5Q6l+B6vatafAwxRu/0oK/79VlbSz7Q9aiSZUvyWYIYsd+qj+o24G5ZU2zJz" crossorigin="anonymous"></script>
+    <script defer src="https://cdn.jsdelivr.net/npm/katex@0.11.1/dist/contrib/auto-render.min.js"
+        integrity="sha384-kWPLUVMOks5AQFrykwIup5lo0m3iMkkHrD0uJ4H5cjeGihAutqP0yW0J6dpFiVkI" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/jquery@3.4.1/dist/jquery.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/axios@0.19.0/dist/axios.min.js" integrity="sha256-S1J4GVHHDMiirir9qsXWc8ZWw74PHHafpsHp5PXtjTs=" crossorigin="anonymous"></script>
+    
+    <script>
+        const loadPage = (div, title, link) => {
+            div.append('<h1>' + title + '</h1>');
+            return new Promise((resolve, reject) => {
+                axios.get(link)
+                    .then(res => {
+                        const page = $(res.data);
+                        div.append(page.find('#content'));
+                        resolve();
                     })
-                    .catch(err => {
-                        $('#title').addClass('text-danger');
-                        $('#title').text('Loading failed.');
-                        console.error(err);
+                    .catch(err => reject(err));
+            });
+        }
+        const printAllNotes = () => {
+            const body = $('body');
+            const title = $('#title').clone().find('a').remove().end().text();
+            const list = $('#notes-list').children();
+            
+            body.children().remove();
+            body.append('<h1 id="title">Loading notes...</h1><hr/>');
+            
+            let pageLoaders = [];
+            $.each(list, (id, anchor) => {
+                console.log(id, anchor);
+                const div = $('<div id="page-' + id + '"></div>');
+                div.appendTo(body);
+                pageLoaders[id] = loadPage(div, anchor.text, anchor.href);
+            });
+
+            Promise.all(pageLoaders)
+                .then(() => {
+                    renderMathInElement(document.body, {
+                        delimiters: [{
+                            left: "$$",
+                            right: "$$",
+                            display: true
+                        },
+                        {
+                            left: "\\[",
+                            right: "\\]",
+                            display: true
+                        },
+                        {
+                            left: "$",
+                            right: "$",
+                            display: false
+                        },
+                        {
+                            left: "\\(",
+                            right: "\\)",
+                            display: false
+                        }]
                     });
-            }
-        </script>
+                    $('#title').text(title);
+                    window.print();
+                    window.location.reload();
+                })
+                .catch(err => {
+                    $('#title').addClass('text-danger');
+                    $('#title').text('Loading failed.');
+                    console.error(err);
+                });
+        }
+    </script>
 </body>
 
 </html>
