--- a/layouts/partials/single-header.html
+++ b/layouts/partials/single-header.html
@@ -1,5 +1,5 @@
 <div class="container rounded bg-gradient-secondary">
-    <div class="row">
+    <div class="row my-lg-5">
         <div class="col p-5 text-center">
             <h1>{{ .Title }}</h1>
             <div>
