--- a/layouts/blog/list.html
+++ b/layouts/blog/list.html
@@ -1,43 +1,41 @@
-{{ define "main" }}
-{{ partial "list-header.html" . }}
+{{ define "main" }} {{ partial "list-header.html" . }}
 <main class="container">
-    <div class="row row-grid justify-content-center">
-        <div class="col col-12">
-            {{ range (.Paginate (.Pages.GroupByDate "2006-01")).PageGroups }}
-            <div class="row mt-3">
-                <div class="col d-flex flex-column flex-md-row">
-                    <div class="mt-3 mr-4">
-                        <h1 id="{{.Key}}">{{.Key}}</h1>
-                    </div>
-                    <div class="w-100">
-                        {{ range .Pages }}
-                        <div class="card shadow-none">
-                            <div class="card-body">
-                                <h5 class="card-title">{{ .Title }}</h5>
-                                {{ with .Params.previewimage }}
-                                    <img class="preview-img" src="{{ . | safeURL }}"/>
-                                {{ end }}
-                                <p class="card-text">{{ .Summary }}</p>
-                                <p class="card-text">
-                                    {{ dateFormat .Site.Params.dateformFull .Date.Local }}
-                                    <span class="float-right btn-inner--text">
-                                        <a href="{{.Permalink}}">
-                                            阅读更多
-                                            <span class="btn-inner--icon">
-                                                <i class="iconfont icon-right-arrow"></i>
-                                            </span>
-                                        </a>
-                                    </span>
-                                </p>
-                            </div>
-                        </div>
-                        {{ end }}
-                    </div>
-                </div>
+  <div class="row row-grid justify-content-center">
+    <div class="col col-12">
+      {{ range (.Paginate (.Pages.GroupByDate "2006-01")).PageGroups }}
+      <div class="row mt-3">
+        <div class="col d-flex flex-column flex-md-row">
+          <div class="mt-3 mr-4">
+            <h1 id="{{.Key}}">{{.Key}}</h1>
+          </div>
+          <div class="w-100">
+            {{ range .Pages }}
+            <div class="card shadow-none">
+              <div class="card-body">
+                <h5 class="card-title">{{ .Title }}</h5>
+                {{ with .Params.previewimage }}
+                <img class="preview-img" src="{{ . | safeURL }}" />
+                {{ end }}
+                <p class="card-text">{{ .Summary }}</p>
+                <p class="card-text">
+                  {{ dateFormat .Site.Params.dateformFull .Date.Local }}
+                  <span class="float-right btn-inner--text">
+                    <a href="{{.Permalink}}">
+                      阅读更多
+                      <span class="btn-inner--icon">
+                        <i class="iconfont icon-right-arrow"></i>
+                      </span>
+                    </a>
+                  </span>
+                </p>
+              </div>
             </div>
             {{ end }}
-            {{ partial "pagination.html" . }}
+          </div>
         </div>
+      </div>
+      {{ end }} {{ partial "pagination.html" . }}
     </div>
+  </div>
 </main>
 {{ end }}
