--- a/layouts/partials/javascripts.html
+++ b/layouts/partials/javascripts.html
@@ -190,7 +190,7 @@ window.onload = () => {
 {{- end -}}
 
 {{- if .Site.Params.comments -}}
-<script id="dsq-count-scr" src={{.Site.Params.countjs}} async></script>
+<script id="dsq-count-scr" src="//{{.Site.Params.disqusname}}.disqus.com/count.js" async></script>
 {{- end -}}
 
 {{ end }}
