include bootstrap in search

--- a/layouts/_default/search.html
+++ b/layouts/_default/search.html
@@ -47,6 +47,16 @@
     <script type="text/javascript" src="{{ $securejquery.RelPermalink }}" integrity="{{ $securejquery.Data.Integrity }}"></script>
 {{- end -}}
 
+{{- /* bootstrap */ -}}
+{{- if .Site.Params.useCDN -}}
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+{{- else -}}
+    {{- $bootstrap := resources.Get "js/bootstrap.min.js" -}}
+    {{- $securebootstrap := slice $bootstrap | resources.Concat "bootstrap.js" | resources.Minify | resources.Fingerprint "sha512" -}}
+    <script type="text/javascript" src="{{ $securebootstrap.RelPermalink }}" integrity="{{ $securebootstrap.Data.Integrity }}"></script>
+{{- end -}}
+
 {{- /* Search */ -}}
 {{- if .Site.Params.useCDN -}}
     <script src="https://cdnjs.cloudflare.com/ajax/libs/fuse.js/3.2.0/fuse.min.js"></script>
