--- a/layouts/blog/single.html
+++ b/layouts/blog/single.html
@@ -21,9 +21,10 @@
           <div class="card-body">
             {{ $content := "" }}
             {{ $mathmode := .Site.Params.mathmode }}
-            {{ with .Params.mathmode }}
-              {{ $mathmode = . }}
+            {{ if isset .Params "mathmode" }}
+              {{ $mathmode = .Params.mathmode }}
             {{ end }}
+            <p>{{.Params.mathmode }}</p>
             {{ if $mathmode }}
               {{ $content = .RawContent | replaceRE "_" "\\_" | markdownify }}
             {{ else }}
