--- a/layouts/notes/single.html
+++ b/layouts/notes/single.html
@@ -36,7 +36,9 @@
 						<div id="content" class="hl-h2">
 							{{ $content := "" }}
 							{{ $mathmode := .Site.Params.mathmode }}
-							{{ $mathmode = not .Params.disablemathmode }}
+							{{ if isset .Params "mathmode" }}
+								{{ $mathmode = .Params.mathmode }}
+						  	{{ end }}
 							{{ if $mathmode }}
 							{{ $content = .RawContent | replaceRE "_" "\\_" | markdownify }}
 							{{ else }}
